<resources>
    <string name="app_name">Manga Room</string>

    <string name="title_activity_reading">ReadingActivity</string>

    <!--Menu Buttons-->
    <string name="btn_search">Search</string>
    <string name="btn_favourites">Favourites</string>
    <string name="btn_settings">Settings</string>

    <!--Search Activity Values-->
    <string name="tv_search">Search mangas by:</string>

    <string-array name="sp_search_setting">
        <item>Title</item>
        <item>Author</item>
        <item>Artist</item>
        <item>Genre</item>
    </string-array>

    <!--Left Right Button Activity Values-->
    <string name="btn_left">Prev</string>
    <string name="btn_right">Next</string>

    <!--Recycler Activity View Values-->
    <string name="btn_chapter_recycler_button">Read</string>
    <string name="btn_read">Read</string>
    <string name="btn_select">Select</string>
    <string name="btn_delete">Delete</string>

    <!--Reading Activity Values-->
    <string name="btn_goto_left_page">\u003C\u002D\u002D</string>
    <string name="btn_goto_right_page">\u002D\u002D\u003E</string>

    <!--Favourites Activity Values-->
    <string name="tv_favourites">Favourites</string>

    <!--Re-used Activity Values-->
    <string name="tv_author_const">Author:</string>
    <string name="tv_artist_const">Artist:</string>
    <string name="tv_genres_const">Genres:</string>
    <string name="sw_favourite">Favourite</string>

    <!--Settings Activity Values-->
    <string name="tv_settings_title">Settings</string>
    <string name="sw_darkmode">Dark mode</string>
    <string name="tv_chapter_language">Select chapter Language:</string>
    <string-array name="sp_chapter_language">
        <item>English</item>
        <item>Chinese</item>
        <item>Croatian</item>
        <item>French</item>
        <item>German</item>
        <item>Indonesian</item>
        <item>Italian</item>
        <item>Japanese</item>
        <item>Korean</item>
        <item>Polish</item>
        <item>Portuguese</item>
        <item>Russian</item>
        <item>Turkish</item>
    </string-array>
    <string name="tv_chapter_buttons">Reading buttons position:</string>
    <string-array name="sp_chapter_buttons">
        <item>Bottom</item>
        <item>Top</item>
    </string-array>
    <string name="tv_reading_order">Reading order:</string>
    <string-array name="sp_reading_order">
        <item>Left-to-Right</item>
        <item>Right-to-Left</item>
    </string-array>
</resources>