<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <TextView
        android:id="@+id/tv_settings_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/tv_settings_title"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_search"
        app:layout_constraintBottom_toBottomOf="@+id/btn_favourites"
        app:layout_constraintEnd_toStartOf="@+id/btn_favourites"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn_favourites" />

    <Button
        android:id="@+id/btn_favourites"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/btn_favourites"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_settings"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_search" />

    <Button
        android:id="@+id/btn_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_settings"
        app:layout_constraintBottom_toBottomOf="@+id/btn_favourites"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_favourites"
        app:layout_constraintTop_toTopOf="@+id/btn_favourites" />

    <Switch
        android:id="@+id/sw_darkmode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/sw_darkmode"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_settings_title" />

    <TextView
        android:id="@+id/tv_chapter_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/tv_chapter_language"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sw_darkmode" />

    <Spinner
        android:id="@+id/sp_chapter_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:entries="@array/sp_chapter_language"
        app:layout_constraintBottom_toBottomOf="@+id/tv_chapter_language"
        app:layout_constraintStart_toEndOf="@+id/tv_chapter_language"
        app:layout_constraintTop_toTopOf="@+id/tv_chapter_language" />

    <TextView
        android:id="@+id/tv_chapter_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/tv_chapter_buttons"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_chapter_language" />

    <Spinner
        android:id="@+id/sp_chapter_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/sp_chapter_buttons"
        app:layout_constraintBottom_toBottomOf="@+id/tv_chapter_buttons"
        app:layout_constraintStart_toStartOf="@+id/sp_chapter_language"
        app:layout_constraintTop_toTopOf="@+id/tv_chapter_buttons" />

    <TextView
        android:id="@+id/tv_reading_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/tv_reading_order"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_chapter_buttons" />

    <Spinner
        android:id="@+id/sp_reading_order"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:entries="@array/sp_reading_order"
        app:layout_constraintBottom_toBottomOf="@+id/tv_reading_order"
        app:layout_constraintStart_toStartOf="@+id/sp_chapter_buttons"
        app:layout_constraintTop_toTopOf="@+id/tv_reading_order" />
</androidx.constraintlayout.widget.ConstraintLayout>